# AdventOfCode

./: .gitignore  README.md
2018/01/: main.go
2018/01b/: main.go
2019/01b/: 01.go
2019/03b/: 03b.go
2019/05/: 05.go
2019/06/: 06.go
2019/06b/: 06.go
2019/07b/: 07b.go
2019/24/: 24.go
AdventOfCode/: AdventOfCode.csproj  Program.cs
AdventOfCode/Solutions/: ASolution.cs  SolutionCollector.cs  Utilities.cs
AdventOfCode/Solutions/2018/01/: main.go
AdventOfCode/Solutions/2018/02/: main.go
AdventOfCode/Solutions/2018/05/: main.go
AdventOfCode/Solutions/2019/01/: 01.go
AdventOfCode/Solutions/2019/01b/: 01.go
AdventOfCode/Solutions/2019/02/: 02.go
AdventOfCode/Solutions/2019/03/: 03.go
AdventOfCode/Solutions/2019/03b/: 03b.go
AdventOfCode/Solutions/2019/04/: 04.go
AdventOfCode/Solutions/2019/05/: 05.go
AdventOfCode/Solutions/2019/05b/: 05.go
AdventOfCode/Solutions/2019/06/: 06.go
AdventOfCode/Solutions/2019/06b/: 06.go
AdventOfCode/Solutions/2019/07/: 07.go
AdventOfCode/Solutions/2019/07b/: 07b.go
AdventOfCode/Solutions/2019/08/: 08.go
AdventOfCode/Solutions/2019/24/: 24.go
AdventOfCode/Solutions/2019_GO/01/: 01.go  input.txt
AdventOfCode/Solutions/2019_GO/03b/: 03b.go
AdventOfCode/Solutions/2021/: go.mod  go.sum
AdventOfCode/Solutions/2022/: go.mod  go.sum
AdventOfCode/Solutions/sol-2023/: Cargo.toml  README.md
AdventOfCode/Solutions/sol-2023/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day19.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
(+137 files in other folders)
