[package]
name = "sol_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
grid = "0.12.0"
num = "0.4.1"
queues = "1.1.0"
scanf = "1.2.1"
